examples/test/testpolicy4425.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4425
  namespace: namespace91
spec:
  podSelector:
    matchLabels:
      key14: value3
      key23: value41
      key46: value18
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key5: value9
      podSelector:
        matchLabels:
          key41: value19
